added basic api base classes, requirements, and exposed a minimal api for sentences

--- a/tatoeba2-django/tatoeba2-django/settings.py.template
+++ b/tatoeba2-django/tatoeba2-django/settings.py.template
@@ -83,6 +83,7 @@ HAYSTACK_CONNECTIONS = {
     'default': {
         'ENGINE': 'xapian_backend.XapianEngine',
         'PATH': os.path.join(BASE_DIR, 'xapian_index'),
+        'HAYSTACK_XAPIAN_STEMMING_STRATEGY': 'STEM_NONE',
     },
 }
 
